# cabalgc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabalgc.cabal
src-exe/: CLI.hs  Config.hs  GC.hs  GetDeps.hs  MonoGraph.hs  PkgTrie.hs  cabalgc.hs
