cabal-version:      2.4
name:               cabalgc
version:            1.0.1.0
synopsis:           Selectively remove library packages in cabal store.

-- A longer description of the package.
-- description:
homepage:           https://github.com/treblacy/cabalgc

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Albert Y. C. Lai
maintainer:         trebla@vex.net

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md, README.md

executable cabalgc
    main-is:          cabalgc.hs
    other-modules:    Config, GC, GetDeps, CLI
    build-depends:    base ^>= 4.14,
                      containers ^>= 0.6.2,
                      directory ^>= 1.3.6,
                      filepath ^>= 1.4,
                      parsec ^>= 3.1.14,
                      process ^>= 1.6.8,
                      cabal-install-parsers ^>= 0.4.3
    hs-source-dirs:   src-exe
    default-language: Haskell2010
